Add Companion device setup pairing
